<resources>
    <string name="app_name">Knockerball Scheduler</string>
    <string name="login_button">Log In</string>
    <string name="register_button">Register</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="password_hint">Password</string>
    <string name="passwordConfirm_hint">Confirm Password</string>
    <string name="email_hint">Email Address</string>
    <string name="register_title">Enter your information</string>
    <string name="loginActivity_register_button">Register</string>
    <string name="mainTitle">Welcome!</string>
    <string name="phone_hint">Phone Number (include area code)</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="selectDate">Select a date</string>

    <!-- Strings related to login -->
    <string name="signInEmail">Enter your email address and password</string>
    <string name="signInButton">Sign In</string>

    <!-- Strings related to confirmation -->
    <string name="nameTitle">Name:</string>
    <string name="ConfirmTitle">Confirm your Request</string>
    <string name="confirmButton">Confirm</string>
    <string name="cancelButton">Cancel</string>
    <string name="customerName">customerName</string>
    <string name="emailTitle">Email:</string>
    <string name="addressTitle">Address:</string>
    <string name="customerEmail">customerEmail</string>
    <string name="customerAddress">customerAddress</string>
    <string name="dateTitle">Date:</string>
    <string name="customerDate">customerDate</string>
    <string name="timeTitle">Time:</string>
    <string name="customerTime">customerTime</string>
    <string name="phoneTitle">Phone:</string>
    <string name="customerPhone">customerPhone</string>
    completions."

    <!-- Strings for displaying legend for calendar -->
    <string name="blacked_out">Unavailable Days</string>
    <string name="red_out">Partially Unavailable Days</string>

    <string name="no_click">Sorry, that time is already reserved</string>
    <string name="timeSlotTitle">Choose an End Time</string>
    <string name="startTime">startTime</string>
    <string name="address">Enter Address Here</string>
    <string name="city">Enter City Here</string>
    <string name="state">Enter State Here</string>
    <string name="endTime">endTime</string>
    <string name="addressButton">Continue to Confirmation</string>
    <string name="backCalendar">Back to the Time Selection</string>

</resources>
