<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cs246.clark.mysqltestapp.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/login_title"
            android:text="@string/register_title"
            android:layout_gravity="center_horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal" />

        <EditText android:id="@+id/name"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_hint"
            android:typeface="normal" />

        <EditText android:id="@+id/password"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>

        <EditText android:id="@+id/passwordConfirm"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordConfirm_hint"
            android:inputType="textPassword"/>

        <EditText android:id="@+id/email"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:text="@string/loginActivity_register_button"
            android:onClick="registerNewUser"/>
    </LinearLayout>
</RelativeLayout>
