<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#B6B6B6">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/mainTitle"
            android:id="@+id/title"
            android:textColor="#FFFFFF"
            android:textSize="15pt"
            android:layout_gravity="center_horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:text="@string/register_button"
            android:id="@+id/registerButton"
            android:onClick="registerButton"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#C1DCF3"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:text="@string/login_button"
            android:layout_gravity="center"
            android:backgroundTint="#C1dCf3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/status"
            android:layout_gravity="center_horizontal"
            android:paddingTop="50dp" />


    </LinearLayout>





</RelativeLayout>
